<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.register.RegisterActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieRegister"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottie/68794-cute-astronaut-operating-laptop.json"
        app:lottie_loop="true"
        android:layout_marginTop="@dimen/_minus60sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinssemi"
        android:text="@string/tx_welcome"
        android:textColor="@color/white_tx"
        android:textSize="@dimen/_19sdp"
        app:layout_constraintTop_toBottomOf="@id/lottieRegister"
        app:layout_constraintStart_toStartOf="@id/lottieRegister"
        app:layout_constraintEnd_toEndOf="@id/lottieRegister"
        android:layout_marginTop="@dimen/_minus10sdp"/>

    <TextView
        android:id="@+id/tv_welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="#DAFEFEFE"
        android:textSize="@dimen/_11sdp"
        android:textAlignment="center"
        android:fontFamily="@font/poppinsreg"
        android:text="@string/tx_welcomeMessage"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        app:icon="@drawable/img"
        android:text="@string/tx_btn_register"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:iconGravity="textStart"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/white_tx"
        app:iconTint="@color/white_tx"
        app:backgroundTint="@color/background_color"
        app:strokeWidth="1dp"
        app:strokeColor="@color/white_tx"
        android:fontFamily="@font/poppinssemi"
        app:iconPadding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_message"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_nonRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:text="@string/tx_btn_unregister"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:iconGravity="textStart"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white_tx"
        app:backgroundTint="@color/background_color"
        app:strokeWidth="1dp"
        app:strokeColor="@color/white_tx"
        android:fontFamily="@font/poppinssemi"
        app:layout_constraintTop_toBottomOf="@id/btn_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>