<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.menuAr.ListObjekActivity">

    <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/d"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:elevation="0dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_pilih_3d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white_tx"
            android:fontFamily="@font/poppinssemi"
            android:layout_gravity="center"
            android:textSize="@dimen/_16sdp"
            android:layout_height="wrap_content"
            android:text="@string/tx_titlePageListObjek"/>
    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_titlePageObjek"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinssemi"
        android:textColor="@color/white_tx"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tx_pilihListObjek"
        android:textSize="@dimen/_16sdp"/>


    <TextView
        android:id="@+id/tv_descPageObjek"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_titlePageObjek"
        app:layout_constraintStart_toStartOf="@id/tv_titlePageObjek"
        app:layout_constraintEnd_toEndOf="@id/tv_titlePageObjek"
        android:fontFamily="@font/poppinsmed"
        android:textAlignment="center"
        android:textColor="@color/white_tx"
        android:text="@string/tx_pilihListObjekAR"
        android:textSize="@dimen/_12sdp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_descPageObjek"
        app:layout_constraintStart_toStartOf="@id/tv_descPageObjek"
        app:layout_constraintEnd_toEndOf="@id/tv_descPageObjek"
        android:background="@color/outline_card"/>

    <TextView
        android:id="@+id/tv_kategoriObjek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_kategoriTitle"
        android:textSize="@dimen/_11sdp"
        android:textColor="@color/white_tx"
        android:layout_marginStart="@dimen/_4sdp"
        android:fontFamily="@font/poppinsmed"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_kategoriPlanet"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_20sdp"
        app:cardBackgroundColor="@color/colorButtonCategory"
        app:strokeColor="@color/colorButtonCategory"
        app:strokeWidth="1dp"
        android:clickable="true"
        app:cardCornerRadius="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/tv_kategoriObjek"
        app:layout_constraintTop_toTopOf="@id/tv_kategoriObjek"
        app:layout_constraintBottom_toBottomOf="@id/tv_kategoriObjek">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_tx"
                android:text="@string/tx_kategoriPlanet"
                android:fontFamily="@font/poppinsreg"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_kategoriBintang"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_20sdp"
        app:cardBackgroundColor="@color/background_color"
        app:strokeColor="@color/colorButtonCategory"
        app:strokeWidth="1dp"
        android:clickable="true"
        app:cardCornerRadius="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/btn_kategoriPlanet"
        app:layout_constraintTop_toTopOf="@id/tv_kategoriObjek"
        app:layout_constraintBottom_toBottomOf="@id/tv_kategoriObjek">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_tx"
                android:text="@string/tx_kategoriBintang"
                android:fontFamily="@font/poppinsreg"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_kategoriSatelit"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_20sdp"
        app:cardBackgroundColor="@color/background_color"
        app:strokeColor="@color/colorButtonCategory"
        app:strokeWidth="1dp"
        android:clickable="true"
        app:cardCornerRadius="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/btn_kategoriBintang"
        app:layout_constraintTop_toTopOf="@id/tv_kategoriObjek"
        app:layout_constraintBottom_toBottomOf="@id/tv_kategoriObjek">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_tx"
                android:text="@string/tx_kategoriSatelit"
                android:fontFamily="@font/poppinsreg"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_loadingSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_minus50sdp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/background_color"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_kategoriObjek">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_loading"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie/141535-rocket-morphing.json"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus12sdp"
                android:fontFamily="@font/poppinssemi"
                android:text="@string/tx_loading"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lottie_loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_listObjek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_kategoriObjek"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleViewListObjek"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>