<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.menuMateri.ListMateriActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_materi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white_tx"
                android:fontFamily="@font/poppinssemi"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:layout_height="wrap_content"
                android:text="@string/tx_titleListMateri"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonKategoriSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/actionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_titleKategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppinsmed"
            android:text="@string/tx_kategoriTitle"
            android:textColor="@color/white_tx"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_kategoriPlanet"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:cardBackgroundColor="@color/colorButtonCategory"
            app:cardCornerRadius="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_titleKategori"
            app:layout_constraintStart_toEndOf="@id/tv_titleKategori"
            app:layout_constraintTop_toTopOf="@id/tv_titleKategori"
            app:strokeColor="@color/colorButtonCategory"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_kategoriPlanet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsreg"
                    android:text="@string/tx_kategoriPlanet"
                    android:textColor="@color/white_tx"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_kategoriBintang"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:cardBackgroundColor="@color/background_color"
            app:cardCornerRadius="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_titleKategori"
            app:layout_constraintStart_toEndOf="@id/btn_kategoriPlanet"
            app:layout_constraintTop_toTopOf="@id/tv_titleKategori"
            app:strokeColor="@color/colorButtonCategory"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsreg"
                    android:text="@string/tx_kategoriBintang"
                    android:textColor="@color/white_tx"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_kategoriSatelit"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:cardBackgroundColor="@color/background_color"
            app:cardCornerRadius="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_titleKategori"
            app:layout_constraintStart_toEndOf="@id/btn_kategoriBintang"
            app:layout_constraintTop_toTopOf="@id/tv_titleKategori"
            app:strokeColor="@color/colorButtonCategory"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsreg"
                    android:text="@string/tx_kategoriSatelit"
                    android:textColor="@color/white_tx"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_loadingSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_minus30sdp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/background_color"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_loading"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie/141535-rocket-morphing.json"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus12sdp"
                android:fontFamily="@font/poppinssemi"
                android:text="@string/tx_loading"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lottie_loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_listMateri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/buttonKategoriSection"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_kategori"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_95sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardBackgroundColor="@color/selected"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/selected"
                app:strokeWidth="@dimen/_1sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_iconKategori"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:contentDescription="@string/app_name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_kategori"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:fontFamily="@font/poppinssemi"
                        android:text="@string/tx_kategori"
                        android:textColor="@color/white_tx"
                        android:textSize="@dimen/_10sdp"
                        app:layout_constraintStart_toEndOf="@id/iv_iconKategori"
                        app:layout_constraintTop_toTopOf="@id/iv_iconKategori" />

                    <TextView
                        android:id="@+id/tv_desc_kategori"
                        android:layout_width="@dimen/_135sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppinsreg"
                        android:textColor="@color/white_tx"
                        android:textSize="@dimen/_7sdp"
                        app:layout_constraintStart_toStartOf="@id/tv_kategori"
                        app:layout_constraintTop_toBottomOf="@id/tv_kategori" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_titleMateri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/poppinssemi"
                android:text="@string/tx_materiSaatIni"
                android:textColor="@color/white_tx"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="@id/cv_kategori"
                app:layout_constraintTop_toBottomOf="@id/cv_kategori" />

            <TextView
                android:id="@+id/tv_titleMateriDesc"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/poppinsreg"
                android:text="@string/tx_titleMateriDesc"
                android:textColor="@color/white_tx"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="@id/cv_kategori"
                app:layout_constraintTop_toBottomOf="@id/tv_titleMateri" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleViewListMateri"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintStart_toStartOf="@id/tv_titleMateriDesc"
                app:layout_constraintTop_toBottomOf="@id/tv_titleMateriDesc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                app:layout_constraintTop_toBottomOf="@id/recycleViewListMateri" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>